--- a/popup-app/index.html
+++ b/popup-app/index.html
@@ -10,10 +10,10 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Demo 文章版バグチェック</title>
   </head>
   <body>
-    <h1>Hello from Electron renderer!</h1>
+    <h1>Demo 文章版バグチェック</h1>
     <p>👋</p>
     <p id="info"></p>
   </body>
