--- a/popup-app/index.html
+++ b/popup-app/index.html
@@ -11,10 +11,26 @@
       content="default-src 'self'; script-src 'self'"
     />
     <title>Demo 文章版バグチェック</title>
+    <style>
+      .correction-button {
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        margin: 10px 0;
+      }
+      .correction-button:hover {
+        background-color: #45a049;
+      }
+    </style>
   </head>
   <body>
     <h1>Demo 文章版バグチェック</h1>
     <p>👋</p>
+    <button id="main-correction-button" class="correction-button">校正する</button>
     <p id="info"></p>
   </body>
   <script src="./renderer.js"></script>
