fix: 校正ボタン

--- a/popup-app/index.html
+++ b/popup-app/index.html
@@ -30,7 +30,7 @@
   <body>
     <h1>Demo 文章版バグチェック</h1>
     <p>👋</p>
-    <button id="main-correction-button" class="correction-button">校正する</button>
+    <button id="main-correction-button" class="correction-button">AIで校正!</button>
     <p id="info"></p>
   </body>
   <script src="./renderer.js"></script>
