--- a/popup-app/popup.html
+++ b/popup-app/popup.html
@@ -45,7 +45,7 @@
   <body>
     <div class="popup-content">
       <div class="clipboard-text" id="clipboard-content"></div>
-      <button class="action-button" id="correct-button">校正する</button>
+      <button class="action-button" id="correct-button">AIで校正!</button>
     </div>
     <script src="./popup.js"></script>
   </body>
