--- a/popup-app/index.html
+++ b/popup-app/index.html
@@ -11,7 +11,7 @@
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"
     />
     <title>Demo 文章版バグチェック</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
     <h1>Demo 文章版バグチェック</h1>
