--- a/popup-app/popup.html
+++ b/popup-app/popup.html
@@ -2,51 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Clipboard Popup</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 8px;
-        background: transparent;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      }
-      .popup-content {
-        background: rgba(255, 255, 255, 0.95);
-        border-radius: 8px;
-        padding: 12px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        max-width: 300px;
-      }
-      .clipboard-text {
-        margin: 8px 0;
-        word-break: break-all;
-        font-size: 14px;
-        line-height: 1.4;
-      }
-      .action-button {
-        background: #007AFF;
-        color: white;
-        border: none;
-        padding: 6px 12px;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 12px;
-        margin-top: 8px;
-      }
-      .action-button:hover {
-        background: #0056b3;
-      }
-    </style>
+    <title>Popup Window</title>
+    <link rel="stylesheet" href="./styles/popup.css">
   </head>
   <body>
     <div class="popup-content">
-      <div class="clipboard-text" id="clipboard-content"></div>
-      <button class="action-button" id="correct-button">AIで校正!</button>
+      <button id="main-correction-button">AIで校正!</button>
+      <div id="info"></div>
     </div>
-    <script src="./popup.js"></script>
+    <script src="renderer.js"></script>
   </body>
 </html> 
