スクリプトファイル名を修正

--- a/popup-app/popup.html
+++ b/popup-app/popup.html
@@ -10,6 +10,6 @@
       <button id="main-correction-button">AIで校正!</button>
       <div id="info"></div>
     </div>
-    <script src="renderer.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html> 
