fix: correct css id

--- a/popup-app/popup.html
+++ b/popup-app/popup.html
@@ -8,6 +8,7 @@
   <body>
     <div class="popup-content">
       <button id="main-correction-button">AIで校正!</button>
+      <div id="clipboard-content"></div>
       <div id="info"></div>
     </div>
     <script src="popup.js"></script>
