--- a/popup-app/popup.html
+++ b/popup-app/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="popup-content">
-      <button id="main-correction-button">AIで校正!</button>
+      <button id="sub-correction-button">AIで校正!</button>
       <div id="clipboard-content"></div>
       <div id="info"></div>
     </div>
